# agent-audit

./: .env.example  .gitignore  README.md  pyproject.toml
agent_audit/: __init__.py  adaptive.py  agentic_harness.py  cli.py  coach.py  demo.py  execution.py  grader.py  harness.py  hiring.py  models.py  pipeline.py  providers.py  runner.py  sandbox.py  scoring.py  strategist.py
agent_audit/tracerank/: __init__.py  cli.py  hints.py  leaderboard.py  model.py  signals.py
agent_audit/tracerank/adapters/: __init__.py  claude_code.py  copilot_vscode.py
agent_audit/tracerank/demo_traces/: alpha_debug.json  alpha_refactor.json  beta_debug.json  beta_feature.json  beta_test.json  gamma_optimize.jsonl
agent_audit/tracerank/demo_traces_claude_code/subagents/: agent-clean-pass.jsonl  agent-clean-pass.meta.json  agent-clean-pass2.jsonl  agent-clean-pass2.meta.json  agent-tool-fail.jsonl  agent-tool-fail.meta.json
docs/: DESIGN_NOTE.md  FINDINGS_AND_OPEN_PROBLEMS.md  RESEARCH.md  RESULTS.md  TRACERANK.md
examples/: customer_support.py
experiments/: cases.py  cost_estimate.py  rescore_efficiency.py  run_agentic_audit.py  run_authored_agentic_audit.py  run_coaching.py  run_harness.py  subagent_run_agentic.py  subagent_run_claim_verification.py  subagent_run_quality_routing.py
experiments/results/: reliability_sweep.md
tests/: test_adaptive.py  test_agentic_harness.py  test_coach.py  test_execution.py  test_harness.py  test_pipeline.py  test_sandbox.py  test_scoring.py  test_tracerank.py
